--- a/EqUiWebUi/Views/Error/AccessDenied.cshtml
+++ b/EqUiWebUi/Views/Error/AccessDenied.cshtml
@@ -11,8 +11,9 @@
     <h4>Sorry</h4>
     <div class="card-body">
         <p>
-            <div class="alert alert-warning">
-                This was implemented on W23...
+            <div class="">
+                <i class="fas fa-lock fa-10x text-danger"></i>
+                <h1>Looks like you don't have the power to go here.</h1>
             </div>
         </p>
 
