--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -185,5 +185,10 @@
             Bollen op layout data van STW040 en MAXIMO (ci)
         </p>
 
+        <p>
+            <a href="~/tableau/Embedded4K?workbook=Equi_HOP_MalfunctionAnalysis_AFG&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">HOP &raquo;</a>
+            Hop Beta
+        </p>
+
     </div>
 </div>
