--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -25,9 +25,17 @@
         </p>
 
         <p>
-            <a href="~/PlcSupervisie/Screenshot/CarouselBF" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
+            <a href="~/PlcSupervisie/Screenshot/CarouselBF" class="btn btn-primary btn-sm">CarouselBF &raquo;</a>
+            Supervisie (intranet)*new
+        </p>
+
+        @{
+        string urlIntranetSupervis = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet");
+        <p>
+            <a href="~/Home/Rendersite?url=@urlIntranetSupervis" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
             Supervisie (intranet)
         </p>
+        }
 
         <p>
             <a href="~/Alert/Alert/Index" class="btn btn-primary btn-sm">Alerts &raquo;</a>
