fixed issue with auth loop on 401 page

--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
@@ -8,7 +8,7 @@
 {
     <div class="label" style="background:black;">
             <div style="z-index: 2; position: absolute; top: 0px; left: 0px;">
-                <div class="label label-danger">
+                <div class="badge-pill bg-danger">
                     You are impersonating!
                     @CurrentUser.Getuser.username
                 </div>
