--- a/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
@@ -16,10 +16,10 @@
     columns.Add(c => c.alarmobject).Titled("alarmobject");
     columns.Add(c => c.info).Titled("info");
     columns.Add(c => c.c_state.state).Titled("state");
-    columns.Add(c => c.id)
+    columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => @Html.ActionLink("EditUser", "Edit","Alert", new { id = c.id },null) + " | " +
+                .RenderedAs(c => @Html.ActionLink("EditUser", "Edit", "Alert", new { id = c.id }, null) + " | " +
                                  @Html.ActionLink("EditAdmin", "Edit", new { id = c.id }) + " | " +
                                  @Html.ActionLink("Delete", "Delete", new { id = c.id })
                 ).Filterable(false);
@@ -28,10 +28,35 @@
     pager.RowsPerPage = 20;
 }).Empty("Did not find anything").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleStatus(row.c_state.state))
 
+
 @section scripts{
     <script>
         //full with screen
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
+
+        //subscribe to row clicked events
+        $('.mvc-grid').mvcgrid({
+            rowClicked: function (row, data, e) {
+                console.log(data);
+                //if row already has this clase close the modal
+                if ($(row).hasClass("bg-info")) {
+                    $("#placeholder").remove();
+                    $(row).removeClass("bg-info");
+                    return;
+                }
+                //clear selected rows for this table
+                $('tr').removeClass('bg-info'); //THIS IS WRONG
+                $(row).addClass("bg-info");
+                $("#placeholder").remove(); //clear placeholder is exists
+                //add new placeholder afhter selected row
+                $(row).after('<tr id="placeholder"><td colspan="10000"><div class="card"><div class="card-body" id ="placeholderPartial"></div></div></td></tr>');
+                //animation
+                $("#placeholderPartial").html("Loading.....");
+                //load url in placeholder
+                var url = "@Url.Action("_Details","Alert",new {Area = "Alert" })?id=" + data.id;
+                $("#placeholderPartial").load(url);
+            }
+        });
     </script>
-    }
+}
