--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
@@ -5,38 +5,41 @@
     ViewBag.Title = "TipwearBeforeChange";
 }
 
-    <div class="card">
-        <div class="card-header bg-primary">
-             <h4>TipwearBeforeChange</h4>
-        </div>
-
-        <div class="card-body">
-                @Html.Grid(Model).Named("DataGrid").Build(columns =>
-           {
-               columns.Add(c => c.controller_name).Titled("Robot");
-               columns.Add(c => c.TipchangeTimestamp).Titled("Tipchangetimestamp").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
-               columns.Add(c => c.WearBeforeChange).Titled("Wear (mm)").Css("XXd-none XXd-md-block");;
-               columns.Add(c => c.WeldsBeforeChange).Titled("#Welds").Css("XXd-none XXd-md-block");;
-               columns.Add(c => c.DressBeforeChange).Titled("#Dress");
-               columns.Add(c => c.C_FixedWearBeforeChange).Titled("%Fixed");
-               columns.Add(c => c.C_MoveWearBeforeChange).Titled("%Move");
-               columns.Add(c => c.TipAge_h_).Titled("(h)leeftijd");
-               columns.Add(c => c.ESTnSpotsFixedWearBefore100).Titled("ESTnSFix100").Css("XXd-none XXd-md-block");;
-               columns.Add(c => c.ESTnSpotsMoveWearBefore100).Titled("ESTnSMov100").Css("XXd-none XXd-md-block");;
-
-               columns.Add()
-                 .Encoded(false)
-                 .Filterable(false)
-                 .Sortable(false)
-                 .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")); //need to add the toolnumber in die model
-           }).Sortable().Filterable(true).Pageable(pager =>
-           {
-               pager.RowsPerPage = 20;
-           }).Empty("No data found").Css("table-hover")
-        </div>
-
-        <div class="panel-footer">
-            <a href="~/Tiplife/NgacElectrode/Index" class="btn-xs btn-primary">Electrode home &raquo;</a>
-            <p>DNBC = DeltaNomBeforeChange if smaller than 0.1 tips are NOT changed.</p>
-        </div>
+<div class="card">
+    <div class="card-header bg-primary">
+        <h4>TipwearBeforeChange</h4>
     </div>
+
+    <div class="card-body">
+        @Html.Grid(Model).Named("DataGrid").Build(columns =>
+        {
+            columns.Add(c => c.controller_name).Titled("Robot");
+            columns.Add(c => c.TipchangeTimestamp).Titled("Tipchangetimestamp").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
+            columns.Add(c => c.WearBeforeChange).Titled("Wear (mm)").Css("XXd-none XXd-md-block"); ;
+            columns.Add(c => c.WeldsBeforeChange).Titled("#Welds").Css("XXd-none XXd-md-block"); ;
+            columns.Add(c => c.DressBeforeChange).Titled("#Dress");
+            columns.Add(c => c.C_FixedWearBeforeChange).Titled("%Fixed");
+            columns.Add(c => c.C_MoveWearBeforeChange).Titled("%Move");
+            columns.Add(c => c.TipAge_h_).Titled("(h)leeftijd");
+            columns.Add(c => c.ESTnSpotsFixedWearBefore100).Titled("ESTnSFix100").Css("XXd-none XXd-md-block"); ;
+            columns.Add(c => c.ESTnSpotsMoveWearBefore100).Titled("ESTnSMov100").Css("XXd-none XXd-md-block"); ;
+
+            columns.Add()
+              .Encoded(false)
+              .Filterable(false)
+              .Sortable(false)
+              .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")); //need to add the toolnumber in die model
+       }).Sortable().Filterable(true).Pageable(pager =>
+       {
+           pager.RowsPerPage = 20;
+       }).Empty("No data found").Css("table-hover")
+    </div>
+</div>
+
+@section scripts{
+    <script type="text/javascript">
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
+    </script>
+}
