--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -91,6 +91,11 @@
                 Opvolging Pickfouten in racken (RFID)
             </p>
 
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=STO&sheet=EventCountDash" class="btn btn-primary btn-sm">STO &raquo;</a>
+                Opvolging STO op layout (plc database)
+            </p>
+
         </div>
     </div>
 
@@ -188,6 +193,11 @@
         <p>
             <a href="~/tableau/Embedded4K?workbook=Equi_HOP_MalfunctionAnalysis_AFG&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">HOP &raquo;</a>
             Hop Beta
+        </p>
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=STO&sheet=EventCountDash" class="btn btn-primary btn-sm">STO &raquo;</a>
+            Opvolging STO op layout (plc database)
         </p>
 
     </div>
