changes to make trend and error infostuff work with STO

--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionDetails.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionDetails.cshtml
@@ -1,13 +1,13 @@
 ﻿
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">l operation</h4>
+    <div class="card-header">
+        <h5 class="card-title text-white">l operation</h5>
         <div class="text-muted">
             (log records in table l_operation for this session)
             @Html.ActionLink("l_operation_index", "Index", "l_operation")
         </div>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
     </div>
     <div class="alert-info">
     </div>
