--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Edit.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Edit.cshtml
@@ -18,10 +18,9 @@
     @Html.HiddenFor(model => model.id)
 
 
-    <div class="card-header bg-primary">
+    <div class="card">
         <div class="card-header bg-primary">
             <h4 class="card-title">Main settings</h4>
-            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="card-body">
 
@@ -83,7 +82,6 @@
     <div class="card">
         <div class="card-header bg-primary">
             <h4 class="card-title">controller events</h4>
-            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="card-body">
             <div class="alert alert-info">
@@ -207,7 +205,6 @@
     <div class="card">
         <div class="card-header bg-primary">
             <h4 class="card-title">Sub system masks </h4>
-            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="alert-info">
         </div>
@@ -267,7 +264,6 @@
     <div class="card">
         <div class="card-header bg-primary">
             <h4 class="card-title">other stuff </h4>
-            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="alert-info">
         </div>
@@ -297,6 +293,8 @@
             </div>
         </div>
     </div>
+
+    <hr />
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-8">
