--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
@@ -60,14 +60,13 @@ else
                     </div>
                 </div>
 
-                @*this wil repleace run against*@
                 @Html.HiddenFor(model => model.c_datasource_id)
                 <div class="form-group">
-                    @Html.LabelFor(model => model.RunAgainstDatabase, "RunAgainstDatabase", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.c_datasource.Name, "RunAgainstDatabase", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EnumDropDownListFor(m => m.RunAgainstDatabase, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.RunAgainstDatabase, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.RunAgainstDatabase)
+                        @Html.DropDownList("c_datasource_id", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.c_datasource_id, "", new { @class = "text-danger" })
+                        @Html.HelpTextFor(model => model.c_datasource.Name)
                     </div>
                 </div>
 
