VSTO tool uses new comlibs now. (quick and dirty need to rewrite some code)

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -196,6 +196,11 @@
         </p>
 
         <p>
+            <a href="~/tableau/Embedded4K?workbook=Equi_HOP_MalfunctionAnalysis_AFG&sheet=4KHOPAnalysis" class="btn btn-primary btn-sm">HOP2 &raquo;</a>
+            Hop Beta
+        </p>
+
+        <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=STO&sheet=EventCountDash" class="btn btn-primary btn-sm">STO &raquo;</a>
             Opvolging STO op layout (plc database)
         </p>
