--- a/EqUiWebUi/Views/c_LogClassRules/Edit.cshtml
+++ b/EqUiWebUi/Views/c_LogClassRules/Edit.cshtml
@@ -23,26 +23,26 @@
             @Html.HiddenFor(model => model.id)
     
             <div class="form-group">
-                @Html.LabelFor(model => model.Err_start, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.coderangeStart, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Err_start, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Err_start, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.coderangeStart, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.coderangeStart, "", new { @class = "text-danger" })
                 </div>
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.Err_end, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.coderangeEnd, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Err_end, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Err_end, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.coderangeEnd, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.coderangeEnd, "", new { @class = "text-danger" })
                 </div>
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.Err_text, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.textSearch, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Err_text, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Err_text, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.textSearch, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.textSearch, "", new { @class = "text-danger" })
                 </div>
             </div>
     
