--- a/EqUiWebUi/Areas/VASC/Views/L_operation/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/L_operation/_List.cshtml
@@ -2,12 +2,12 @@
 
     @Html.Grid(Model).Named("L_operationGrid").Build(columns =>
 {
-    columns.Add(c => c.ID).Titled("id").InitialSort(GridSortOrder.Desc).Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.ID).Titled("id").InitialSort(GridSortOrder.Desc).Css("d-none d-md-table-cell");
     columns.Add(c => c.C_timestamp).Titled("_timestamp");
     columns.Add(c => c.code).Titled("code");
-    columns.Add(c => c._L_operationCode).Titled("Operation").Css("XXd-none XXd-md-block");;
-    columns.Add(c => c.Vasc_name).Titled("Vasc_name").Css("XXd-none XXd-md-block");;
-    columns.Add(c => c.controller_id).Titled("controller_id").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c._L_operationCode).Titled("Operation").Css("d-none d-md-table-cell");
+    columns.Add(c => c.Vasc_name).Titled("Vasc_name").Css("d-none d-md-table-cell");
+    columns.Add(c => c.controller_id).Titled("controller_id").Css("d-none d-md-table-cell");
     columns.Add(c => c.c_controller.controller_name).Titled("controller_name");
     columns.Add(c => c.Description).Titled("Desciption");
 }).Filterable().Sortable().Pageable(pager =>
