--- a/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
@@ -4,8 +4,8 @@
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
-    columns.Add(c => c._Poll_Rate).Titled("Poll_Rate").Css("XXd-none XXd-md-block");;
-    columns.Add(c => c._Insert_update).Titled("Insert_update").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c._Poll_Rate).Titled("Poll_Rate").Css("d-none d-md-table-cell");
+    columns.Add(c => c._Insert_update).Titled("Insert_update").Css("d-none d-md-table-cell");
     columns.Add(c => c.name).Titled("name");
     columns.Add(c => c)
                         .Titled("")
