--- a/EqUiWebUi/Areas/user_management/Views/AreaFilters/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/AreaFilters/Index.cshtml
@@ -12,12 +12,12 @@
 
 @Html.Grid(Model).Named("AreaFilters").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc).Css("XXd-none XXd-md-block");;
-    columns.Add(c => c.Plant).Titled("Plant").Css("XXd-none XXd-md-block");;
-    columns.Add(c => c.Optgroup).Titled("Optgroup").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc).Css("d-none d-md-table-cell");
+    columns.Add(c => c.Plant).Titled("Plant").Css("d-none d-md-table-cell");
+    columns.Add(c => c.Optgroup).Titled("Optgroup").Css("d-none d-md-table-cell");
     columns.Add(c => c.LocationTreeFilter1).Titled("LocationTreeFilter1");
     columns.Add(c => c.Area).Titled("Area");
-    columns.Add(c => c.UserComment).Titled("UserComment").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.UserComment).Titled("UserComment").Css("d-none d-md-table-cell");
     columns.Add(c => c.id)
                 .Titled("")
                 .Encoded(false)
@@ -25,7 +25,7 @@
                                  @Html.ActionLink("Details", "Details", new { id = c.id }) + " | " +
                                  @Html.ActionLink("Delete", "Delete", new { id = c.id })
 
-                ).InitialSort(GridSortOrder.Asc).Filterable(false).Css("XXd-none XXd-md-block");;
+                ).InitialSort(GridSortOrder.Asc).Filterable(false).Css("d-none d-md-table-cell");
 }).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 15;
